--- a/style.css
+++ b/style.css
@@ -75,11 +75,11 @@ nav img{
     width: 100%;
 }
 
-.nav .fa{
+.nav .fas{
     display: none;
 }
 
-.nav .fa-bar {
+.fa-bars {
     display: none;
 }
 
@@ -137,12 +137,12 @@ nav img{
     color: #000;
 }
 
-.companies h1{
+h1{
     font-size: 2.25rem;
     font-weight: 600 ;
 }
 
-.companies p{
+p{
     color: #777;
     font-size: 0.9rem;
     font-weight: 300;
@@ -295,10 +295,195 @@ nav img{
     background-color: #000;
 }
 
+/* facilities */
+
+.facilities{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
+}
+
+.facilities-col{
+    flex-basis: 31%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    text-align: left;
+}
+
+.facilities-col img{
+    width: 100%;
+    height: 300px;
+    border-radius: 10px;
+}
+
+.facilities-col p{
+    padding: 0;
+}
+
+.facilities-col h3{
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+/* testimonials */
+
+.testimonials{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 100px;
+}
+
+.testimonial-col{
+    flex-basis: 44%;
+    border-radius: 10px;
+    margin-bottom: 5%;
+    text-align: left;
+    background: #fff3f3;
+    padding: 25px;
+    cursor: pointer;
+    display: flex;
+}
+
+.testimonial-col img{
+    height: 40px;
+    margin-left: 5px;
+    margin-right: 30px;
+    border-radius: 50%;
+}
+
+.testimonial-col p{
+    padding: 0;
+}
+
+.testimonial-col h3{
+    margin-top: 15px;
+    
+}
+
+.testimonial-col .fas{
+    color: #ff6501;
+}
+
+/* call to action */
+
+.cta{
+    margin: 100px auto;
+    width: 80%;
+    background-image: linear-gradient(rgba(0,0,0,0.7),rgba(0,0,0,0.7)),url(images/banner2.jpg);
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    text-align: center;
+    padding: 100px, 0;
+    height: 400px;
+}
+
+.cta h1{
+    color: #fff;
+    margin-bottom: 40px;
+    padding: 0;
+    font-size: 1.8rem;
+}
+
+.cta h1{
+    padding-top: 120px;
+}
+
+/* footer */
+
+.footer{
+    width: 100%;
+    text-align: center;
+    padding: 30px 0;
+}
+
+.footer h4{
+    margin-bottom: 25px;
+    margin-top: 20px;
+    font-weight: 600;
+}
+
+.icons .fa-brands{
+    color: #ff6501;
+    margin: 0 13px;
+    cursor: pointer;
+    padding: 18px 0 ;
+}
+
+.fa-regular{
+    color: #ff6501;
+}
 
 
+/* ----about us page---- */
 
+.sub-header{
+    height: 50vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(images/office8.JPG);
+    background-position: center;
+    background-size: cover;
+    text-align: center;
+    color: #fff;
+}
 
+.sub-header h1{
+    margin-top: 100px ;
+}
+
+.about-us{
+    width: 80%;
+    margin: auto;
+    padding-top: 80px;
+    padding-bottom: 50px;
+
+}
+
+.about-col{
+    flex-basis: 48%;
+    padding: 30px 2px ;
+}
+
+.about-col img{
+    width: 100%;
+}
+
+.about-col h1{
+    padding-top: 0;
+
+}
+
+.about-col p{
+    padding: 15px 0 25px;
+}
+
+.red-btn{
+    border: 1px solid #ff6501;
+    background: transparent;
+    color: #ff6501 ;
+}
+
+.red-btn:hover {
+    color: #fff;
+}
+
+/* blog content */
+
+.blog-content{
+    width: 80%;
+    margin: auto;
+    padding: 60px 0;
+}
+
+.blog-left{
+    flex-basis: 65%;
+}
+
+.blog-left img{
+    
+}
 
 
 
@@ -320,6 +505,7 @@ nav img{
 
     .nav ul li{
         display: block;
+        
     }
 
     .nav{
@@ -336,13 +522,40 @@ nav img{
         transition: all 1s linear; */
     }
 
-    .nav .fa{
+    .header .nav{
+        position: absolute;
+        top: 99%; left: 0; right:0;
+        background: var(--clr-black);
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    }
+
+    .header .nav a{
+        display: block;
+        font-size: 2rem;
+        
+    }
+
+    .header .navbar.active{
+        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    }
+
+    .logo-menu{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    /* .fa-times, .fa-bars{
         display: block;
         color: #fff;
         margin: 10px;
         font-size: 22px;
         cursor: pointer ;
     }
+
+    .fa-times{
+        z-index: 4;
+    } */
+
     .nav ul{
         padding: 30px ;
     }
@@ -351,4 +564,20 @@ nav img{
         display: block;
 
     }
+
+    .testimonial-col img{
+        margin-left: 0px;
+        margin-right: 15px;
+        
+    }
+
+    .cta h1{
+        font-size: 1.4rem;
+    }
+
+    .cta{
+        padding: 12px;
+    }
+
+    
 }
