--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body{
     position: relative;
     min-height: 100vh;
     width: 100%;
+    margin-top: -120px;
 }
 
 nav{
@@ -482,8 +483,55 @@ p{
 }
 
 .blog-left img{
-    
+    width: 100%;
+    height: 50%;
 }
+
+.blog-left h2{
+    color: #222;
+    font-weight: 600;
+    margin: 30px 0;
+}
+
+.blog-left p{
+    color: #999;
+    padding: 0;
+}
+
+.blog-right{
+    flex-basis: 32%;
+}
+
+.blog-right h3{
+    background: #ff6501;
+    color: #fff;
+    padding: 7px 0;
+    font-size: 16px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.blog-right ul li{
+    padding: 8px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -518,15 +566,13 @@ p{
         right: 0;
         text-align: left;
         z-index: 2;
-        /* transform: translate(200px);
-        transition: all 1s linear; */
+        /* transform: translate(200px);*/
+        transition: 2s linear; 
     }
 
     .header .nav{
         position: absolute;
-        top: 99%; left: 0; right:0;
-        background: var(--clr-black);
-        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+        
     }
 
     .header .nav a{
@@ -535,16 +581,14 @@ p{
         
     }
 
-    .header .navbar.active{
-        clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-    }
+    
 
     .logo-menu{
         display: flex;
         justify-content: space-between;
     }
 
-    /* .fa-times, .fa-bars{
+    .fa-times, .fa-bars{
         display: block;
         color: #fff;
         margin: 10px;
@@ -554,7 +598,7 @@ p{
 
     .fa-times{
         z-index: 4;
-    } */
+    }
 
     .nav ul{
         padding: 30px ;
