--- a/style.css
+++ b/style.css
@@ -5,17 +5,6 @@
     text-transform: capitalize;
 }
 
-/* html{
-    background-image: linear-gradient(#ff6501, #b64900);
-}
-
-body{
-    background-image: url(images/m4\ empire\ \ 1.png);
-    background-repeat: no-repeat;
-    background-position: top center;
-    background-size: cover;
-} */
-
 .header{
     background-image: url(images/group-of-people.JPG);
     background-position: center;
@@ -27,13 +16,11 @@ body{
 }
 
 nav{
-    /* width: 90%; */
     display: flex;
     padding: 2% 6%;
     justify-content: space-between;
     align-items: center ;
-     position: sticky;
-    /* background-color: #1c1c1a; */
+    position: sticky;
     z-index: 4; 
     top: 0;
 }
@@ -157,30 +144,53 @@ p{
     flex-wrap: wrap;
     justify-content: space-between;
     text-decoration: none;
-    cursor: pointer;
     color: #000;
 }
 
 .company-col{
-    flex-basis: 31%;
+    flex-basis: 32%;
     background: #fff3f3;
     border-radius: 10px;
     margin-bottom: 5%;
     padding: 20px 12px;
     box-sizing: border-box;
     transition: 0.5s;
+    position: relative;
+    overflow: hidden;
+}
+
+.company-col img{
+    position: absolute;
+    top: 0; left: 0; opacity: 0.5;
+    height: 180px;
+    right: 0; bottom: 0;
+    margin: auto;
+}
+
+.company-col .insured img{
+    height: 120px;
+
 }
 
 .company-col h3{
-    font-size: 2rem;
+    font-size: 1.7rem;
     font-weight: 600;
     margin: 10px 0;
     text-align: center;
+    
+}
+
+.company-col p{
+    color: #000000;
 }
 
 .company-col:hover{
     box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.2);
 
+}
+
+.company-col:hover p{
+    font-weight: 450;
 }
 
 /* our nfts */
@@ -212,9 +222,7 @@ p{
 .our-nfts .box img{
     height: 100%;
     width: 100%;
-    object-fit: fit;
 }
-
 
 .our-nfts  .box .share{
     padding-top: 2rem;
@@ -222,21 +230,9 @@ p{
     border-top: .1rem solid #fff;
 }
 
-.our-nfts-btn {
-    margin-top: 1rem;
-    display: inline-block;
-    padding:1rem 2rem;
-    padding-right: 3rem;
-    color: var(--clr-light);
-    cursor: pointer;
-    font-size: 1.2rem;
-    border-radius: 1000px;
-    background-color: var(--clr-orange);
-}
-
 .our-nfts .row .box .content{
     position: absolute;
-    bottom: 0; left:0; right:0;
+    bottom: 0; left: 0; right:0;
     background: #1c1c1a;
     padding:2rem;
     transform: translateY(6.5rem);
@@ -343,7 +339,6 @@ p{
     text-align: left;
     background: #fff3f3;
     padding: 25px;
-    cursor: pointer;
     display: flex;
 }
 
@@ -428,10 +423,11 @@ p{
     background-size: cover;
     text-align: center;
     color: #fff;
+    margin-top: -120px;
 }
 
-.sub-header h1{
-    margin-top: 100px ;
+.sub-header .text-box h1{
+    margin-top: -200px;
 }
 
 .about-us{
@@ -440,6 +436,10 @@ p{
     padding-top: 80px;
     padding-bottom: 50px;
 
+}
+
+.about-us .about-col p span{
+    color: #ff6501;
 }
 
 .about-col{
@@ -451,10 +451,33 @@ p{
     width: 100%;
 }
 
+.about-col1 img{
+    width: 100%;
+    height: 600px;
+}
+
 .about-col h1{
     padding-top: 0;
-
 }
+
+ol{
+    color: #999;
+    line-height: 30px;
+}
+
+.about-us .row2 a{
+    text-decoration: none;
+    color: #ff6501;
+}
+
+.about-us .row .about-col p{
+    line-height: 25px;
+}
+
+.about-us .row2 p{
+    line-height: 28px;
+}
+
 
 .about-col p{
     padding: 15px 0 25px;
@@ -483,7 +506,7 @@ p{
 }
 
 .blog-left img{
-    width: 100%;
+    width: 90%;
     height: 50%;
 }
 
@@ -515,8 +538,73 @@ p{
     padding: 8px;
 }
 
+.comment-box{
+    border: 1px solid #ccc;
+    margin: 50px 0;
+    padding: 10px 20px;
+}
 
+.comment-box h3{
+    text-align: left ;
+}
 
+.comment-form input, .comment-form textarea{
+    width: 100%;
+    padding: 10px;
+    margin: 15px 0;
+    box-sizing: border-box;
+    border: none;
+    outline: none;
+    background: #f0f0f0;
+}
+
+.comment-form button{
+    margin: 10px 0;
+}
+
+.contact-us{
+    width: 80%;
+    margin: auto;
+    
+}
+
+.contact-col{
+    flex-basis: 48%;
+    margin-bottom: 30px;
+}
+
+.contact-col div{
+    display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+}
+
+.contact-col div .fa-regular{
+    font-size: 28px;
+    margin: 10px;
+    margin-right: 30px;
+}
+
+.contact-col div p{
+    padding: 0;
+}
+
+.contact-col div h5{
+    font-size: 20px;
+    margin-bottom: 5px;
+    color: #555;
+    font-weight: 400;
+}
+
+.contact-col input, .contact-col textarea{
+    width: 100%;
+    padding: 15px;
+    margin-bottom: 17px;
+    outline: none;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+
+}
 
 
 
@@ -543,6 +631,22 @@ p{
     .our-nfts .row{
         display: block;
     }
+
+    .blog-right{
+        margin: 15px;
+    }
+
+    .sub-header .text-box h1{
+        font-size: 1.8rem;
+    }
+
+    .about-us .row2 h1{
+        margin-top: 50px;
+    }
+
+    
+
+    
 }
 
 
@@ -557,7 +661,7 @@ p{
     }
 
     .nav{
-        /* display: none; */
+        display: none;
         position: absolute;
         background: #ff6501;
         height: 50vh;
@@ -568,6 +672,10 @@ p{
         z-index: 2;
         /* transform: translate(200px);*/
         transition: 2s linear; 
+    }
+
+    .nav .fas{
+        display: block;
     }
 
     .header .nav{
